- Fix style problem with table head overflow.

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -124,3 +124,9 @@ div.navbar-dropdown{
 .customHeaderColorSpeciesList{
     color: $grey;
 }
+
+/***fixed width for table header***/
+
+.is-fixed-width {
+    width: 90px;
+  }
